--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -55,6 +55,8 @@
 
 @import "../pages/order-status/order-status.scss";
 
+@import "../pages/company-detail/company-detail.scss";
+
 .border-top-grey {
   border-top: solid 1px #b2b2b2;
 }
