--- a/app/pages/sdk/sdk.scss
+++ b/app/pages/sdk/sdk.scss
@@ -1,7 +1,9 @@
 .sdk {
   position: relative;
   text-align: center;
-
+  ion-icon {
+    font-size: 0.8em;
+  }
   .download-icon {
     position: relative;
     margin-top: 10%;
