--- a/app/pages/order-list/order-list.scss
+++ b/app/pages/order-list/order-list.scss
@@ -1,8 +1,8 @@
 .order-list {
   ion-note {
-    font-size: 12px;
-    align-self: flex-start;
-    margin-top: 14px;
+    font-size: 14px;
+    //align-self: flex-start;
+    //margin-top: 14px;
     color: map_get($colors, primary);
   }
 }
