--- a/app/pages/product/product.scss
+++ b/app/pages/product/product.scss
@@ -10,6 +10,14 @@
     }
   }
 
+  .item[detail-push] .item-inner, button.item:not([detail-none]) .item-inner, a.item:not([detail-none]) .item-inner {
+    background-image: none;
+    padding: 0 8px;
+  }
+
+  .item {
+    padding-left: 0;
+  }
   ion-grid {
     padding-top: 8px;
   }
