--- a/app/pages/sdk/sdk.scss
+++ b/app/pages/sdk/sdk.scss
@@ -1,7 +1,7 @@
 .sdk {
   position: relative;
   text-align: center;
-  ion-icon {
+  ion-item ion-icon {
     font-size: 0.8em;
   }
   .download-icon {
