--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -57,6 +57,8 @@
 
 @import "../pages/company-detail/company-detail.scss";
 
+@import "../pages/product-category/product-category.scss";
+
 .border-top-grey {
   border-top: solid 1px #b2b2b2;
 }
