--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -1,29 +1,56 @@
 @import "app.variables";
+
 .home {
 
+  background: #f2f2f2;
+  .boder-grey {
+    border-top: solid 4px #c8c7cc;
+    border-bottom: solid 1px rgba(198,54,47,0.6);
+  }
+
+  ion-grid {
+    background: white;
+  }
+
   .text-on-bottom {
-    height: 86px;
+    padding-top: 12px;
+    height: 96px;
     ion-icon {
-      font-size: 48px;
-      padding-left: 13px;
-      font-weight: normal;
-      color: color($colors, primary);
+      font-size: 42px;
+      padding-left: 12px;
+      //font-weight: normal;
+
     }
     span {
-      color: black;
+      //color: white;
       font-size: 14px;
     }
   }
 
+  .main_action {
+    .text-on-bottom {
+      height: 128px;
+      ion-icon {
+        font-size: 64px;
+        padding-left: 18px;
+        color: rgba(198,54,47,0.8);
+      }
+      span {
+        color: rgba(198,54,47,0.8);
+        font-size: 14px;
+      }
+    }
+  }
+
 }
+
 .titleicon {
   position: relative;
   //display:inline-block;
-  bottom:5px;
+  bottom: 5px;
   font-size: 18px;
   font-weight: bold;
 }
-
 
 .text-on-bottom > .button-inner {
   flex-direction: column;
