--- a/app/pages/order-status/order-status.scss
+++ b/app/pages/order-status/order-status.scss
@@ -34,7 +34,7 @@
   }
 
   .timeline .timeline-thumb.timeline-icon ion-icon {
-    font-size: 28px;
+    font-size: 24px;
     margin-top: 0px;
     padding: 6px 0;
     display: block;
@@ -45,6 +45,9 @@
     margin-left: 36px;
     border-bottom: 1px solid #ccc;
     padding-bottom: 8px;
+    h4{
+      font-size: 16px;
+    }
   }
 
   .timeline .timeline-stats {
